// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BoutResult snapshot > BoutResult shape snapshot 1`] = `
{
  "archetypeMatchup": {
    "counterActivated": true,
    "eastArchetype": "all_rounder",
    "westArchetype": "all_rounder",
  },
  "boutId": "test-001",
  "duration": 20,
  "excitementScore": 3,
  "inBoutInjury": null,
  "isKinboshi": false,
  "isTimeout": false,
  "kenshoEnvelopes": 0,
  "kimarite": "oshidashi",
  "kimariteName": "oshidashi",
  "log": [
    {
      "clock": 0,
      "data": {
        "contactPoint": "chest",
        "eastArchetype": "all_rounder",
        "eastPower": 48.6,
        "eastTachiaiBonus": 0,
        "intensity": "even",
        "margin": 5.091436603477604,
        "speedRating": 50,
        "tachiaiType": "chest_clash",
        "tachiaiWinner": "west",
        "westArchetype": "all_rounder",
        "westPower": 53.7,
        "westTachiaiBonus": 0,
      },
      "phase": "tachiai",
    },
    {
      "clock": 10,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0.2592,
        "engagementAngle": 0.324,
        "family": "speed",
        "forceDiff": -5.093100178438649,
        "lateralOffsetDiff": 0.324,
        "tick": 5,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 20,
      "data": {
        "eastFatigue": 4.5,
        "fatigueDelta": 0,
        "westFatigue": 4.5,
      },
      "phase": "fatigue",
    },
    {
      "clock": 20,
      "data": {
        "attackerSide": "west",
        "eastLateral": 0.045349631999999994,
        "engagementAngle": 0.06718463999999999,
        "family": "push",
        "forceDiff": -3.9241465975860015,
        "lateralOffsetDiff": 0.06718463999999999,
        "tick": 10,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
  ],
  "loserRikishiId": "r1",
  "momentumScore": -0.5091436603477605,
  "monoii": false,
  "stance": "push-dominant",
  "tachiaiWinner": "west",
  "upset": false,
  "winner": "west",
  "winnerRikishiId": "r2",
}
`;

exports[`BoutResult snapshot BoutResult shape snapshot 1`] = `
{
  "archetypeMatchup": {
    "counterActivated": true,
    "eastArchetype": "all_rounder",
    "westArchetype": "all_rounder",
  },
  "boutId": "test-001",
  "duration": 120,
  "excitementScore": 20,
  "inBoutInjury": null,
  "isKinboshi": false,
  "isTimeout": false,
  "kenshoEnvelopes": 0,
  "kimarite": "oshitaoshi",
  "kimariteName": "oshitaoshi",
  "log": [
    {
      "clock": 0,
      "data": {
        "contactPoint": "chest",
        "eastArchetype": "all_rounder",
        "eastPower": 53.2,
        "eastTachiaiBonus": 0,
        "intensity": "even",
        "margin": 0,
        "speedRating": 50,
        "tachiaiType": "chest_clash",
        "tachiaiWinner": "east",
        "westArchetype": "all_rounder",
        "westPower": 53.2,
        "westTachiaiBonus": 0,
      },
      "phase": "tachiai",
    },
    {
      "clock": 10,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 5,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 20,
      "data": {
        "eastFatigue": 4.5,
        "fatigueDelta": 0,
        "westFatigue": 4.5,
      },
      "phase": "fatigue",
    },
    {
      "clock": 20,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 10,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 30,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 15,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 40,
      "data": {
        "eastFatigue": 9.5,
        "fatigueDelta": 0,
        "westFatigue": 9.5,
      },
      "phase": "fatigue",
    },
    {
      "clock": 40,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 20,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 50,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 25,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 60,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 30,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 70,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 35,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 80,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 40,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 90,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 45,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 100,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 50,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 110,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 55,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
    {
      "clock": 120,
      "data": {
        "attackerSide": "east",
        "eastLateral": 0,
        "engagementAngle": 0,
        "family": "push",
        "forceDiff": 1.2000000000000002,
        "lateralOffsetDiff": 0,
        "tick": 60,
        "westLateral": 0,
      },
      "phase": "engagement",
    },
  ],
  "loserRikishiId": "r2",
  "momentumScore": 0,
  "monoii": false,
  "stance": "push-dominant",
  "tachiaiWinner": "east",
  "upset": false,
  "winner": "east",
  "winnerRikishiId": "r1",
}
`;
